# japanese-lightnovel-translator

./: .env.example  .gitignore  README.md  XLM-RoBERTa.ipynb  apichat.py  batchtranslator.py  environment.yml  epubloader.py  epubparser.py  gclient.py  name_handler.py  nameaggregator.py  nameparser.py  nametranslator.py  prompt.py  pyproject.toml  rubyparser.py  run1.bat  run2.bat  translation.yaml.example  utils.py  webchat.py
resource/: exclusions.txt  jp_char_map.json  moderationv2.js  namedetect_prompt_1.txt  namedetect_prompt_2.txt  namedetect_prompt_3.txt  nametranslate_prompt.txt  polish_prompt.txt  promptv2.txt  remove_annotation_prompt.txt  rubi_prompt.txt  trad_char.txt
