[tool.poetry]
name = "epubtranslator"
version = "1.0.0"
description = ""
authors = ["ShenSheiBot <shensheibot@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
EbookLib = "^0.18"
fastapi_poe = "^0.0.32"
hanziconv = "^0.3.2"
loguru = "^0.7.2"
openai = "1.12.0"
protobuf = "^4.25.2"
pyperclip = "^1.8.2"
PyYAML = "^6.0.1"
tqdm = "^4.66.1"
google-generativeai = "^0.3.2"
scikit-learn = "^1.3.2"
opencv-python = "^4.9.0.80"
markdown = "^3.5.2"
shutils = "^0.1.0"
bitsandbytes = "^0.42.0"
ja-sentence-segmenter = "^0.0.2"
pydantic-settings = "^2.2.1"
html5lib = "^1.1"
py7zr = "^0.21.0"
p-tqdm = "^1.4.0"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
